added imcomplete iframe tag

--- a/css.css
+++ b/css.css
@@ -1,8 +1,14 @@
 body{
-    background-color: black;
+    
     padding-block-start: 12px ;
     margin: 12 px;
     color-scheme:red ;
     font-size: medium;
+    background-image: url("Hackers-PC-Backgrounds.jpeg");   
+    
+}
+h1 {
+    color:white;
+    text-align: center;
     
 }
